Fix bug were buttons covered nav menu
z-index: 100 to the rescue

--- a/src/style.css
+++ b/src/style.css
@@ -282,6 +282,7 @@ footer {
     width: 100%;
     justify-content: center;
     align-items: center;
+    z-index: 100;
   }
   #menu-toggle ~ .links a {
     height: 0;
